add champion incidence matrices, refine normalization methods

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# 以'#' 开始的行，被视为注释.
-# 忽略掉所有文件名是 foo.txt 的文件.
-
-# 忽略所有生成的 html 文件,
 *.db
 *.pyc
-# foo.html是手工维护的，所以例外.
-#!foo.html
-#  忽略所有.o 和 .a文件.
+*.png
 *.[oa]
